examples/test/testpolicy15987.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15987
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key47: value10
      key24: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value38
          key23: value27
          key6: value43
      podSelector:
        matchLabels:
          key4: value4
          key28: value22
